--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,44 @@
 .root {
+  position: relative;
+  top: 10px;
+}
+
+.input {
   border: 1px solid rgba(0,0,0, 0.1);
   padding: 8px 15px;
-  width: 300px;
-  border-right: 10px;
+  padding-left: 36px;
+  width: 450px;
+  border-radius: 10px;
+  &:focus {
+    border: 1px solid rgba(0,0,0, 0.3);
+  }
+  z-index: 2;
+}
+
+.searchIcon {
+  width: 22px;
+  height: 22px;
+  opacity: 0.2;
+  position: absolute;
+  top: 6px;
+  left: 10px;
+}
+
+.clearIcon {
+  width: 22px;
+  height: 22px;
+  opacity: 0.2;
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.4;
+  }
+}
+
+.btnClear {
+  outline: none;
+  border: none;
 }
